# python_piscine_42

./: .gitignore  README.md  requirements.txt
module_00/: Subject.md  Subject_00.md
module_00/ex00/: answers.txt  conda_script.sh
module_00/ex01/: exec.py
module_00/ex02/: whois.py
module_00/ex03/: count.py
module_00/ex04/: operations.py
module_00/ex05/: kata00.py  kata01.py  kata02.py  kata03.py  kata04.py
module_00/ex06/: recipe.py
module_00/ex07/: filterwords.py
module_00/ex08/: sos.py
module_00/ex09/: guess.py
module_00/ex10/: loading.py
module_01/: Subject_01.md
module_01/ex00/: book.py  recipe.py  test.py
module_01/ex01/: game.py
module_01/ex02/: test.py  vector.py
module_01/ex03/: generator.py
module_01/ex04/: eval.py
module_01/ex05/: banking_test1.py  banking_test2.py  banking_test3.py  the_bank.py
module_02/: Subject_02.md
module_02/ex00/: ft_filter.py  ft_map.py  ft_reduce.py
module_02/ex01/: main.py
module_02/ex02/: logger.py
module_02/ex03/: csvreader.py  good.csv
module_02/ex04/: build.sh
module_02/ex04/my_minipack/: build.sh  pyproject.toml  setup.cfg  setup.py
module_02/ex04/my_minipack/src/: __init__.py  logger.py  progress.py
module_02/ex05/: TinyStatiscian.py
