
[metadata]
Name: my-minipack
Version: 1.0.0
Summary: How to create a package in python.
Home-page: None 
Author: mdavid
Author-email: mdavid@student.42.fr 
License: GPLv3
Location: /Users/alvgomez/python_piscine_42/module02/tmp_env/lib/python3.7/site-packages 
Requires:
Required-by: 
Metadata-Version: 2.1
Installer: pip
Classifiers:
Development Status :: 3 - Alpha 
Intended Audience :: Developers
Intended Audience :: Students
Topic :: Education
Topic :: HowTo
Topic :: Package
License :: OSI Approved :: GNU General Public License v3 (GPLv3)
Programming Language :: Python :: 3
Programming Language :: Python :: 3 :: Only

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src